Add database as source of albums retrieval
