# src/DTO/AlbumDTORequest.php
@@ -13,6 +13,12 @@ class AlbumDTORequest
     #[Assert\Type('numeric')]
     private $limit;
 
+    #[Assert\Type('string')]
+    private $source;
+
+    #[Assert\Type('string')]
+    private $sort;
+
     public function setLimit($limit): void
     {
         $this->limit = $limit;
@@ -21,5 +27,25 @@ class AlbumDTORequest
     public function getLimit(): string
     {
         return $this->limit;
+    }
+
+    public function setSource($source): void
+    {
+        $this->source = $source;
+    }
+
+    public function getSource(): string
+    {
+        return $this->source;
+    }
+
+    public function setSort($sort): void
+    {
+        $this->sort = $sort;
+    }
+
+    public function getSort(): string
+    {
+        return $this->sort;
     }
 }
